--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 body{
+
+	font-weight: 300;
+	font-size: 20px;
+	font-family: 'Open Sans','helvetica',arial,sans-serif;
+
 	background-image: url(../img/bg5.jpg);
 	background-attachment: fixed;
 	background-size: cover;
@@ -8,33 +13,30 @@ body{
 .container{
 	width: 960px;
 	margin: 0 auto;
-	padding: 1px;
-	padding-top: 100px;
 }
 
 .main-header {
-	/*margin-bottom: 10px;*/
+	margin-top: 100px;
+	padding: 1px;
 	text-align: center;
-	font-weight: 300;
-	font-size: 50px;
-	font-family: 'Open Sans','helvetica',arial,sans-serif;
 
 	background-image: url(../img/banner.jpg);
-	text-shadow: 0 1px rgba(0,0,0,0.3);
+
 }
 
 .main-header__avatar{
 	display: block;
 	margin: 0 auto;
-	margin-top: -70px;
+	margin-top: -75px;
 	border: 3px solid white;
 
 	border-radius: 999px;
 	box-shadow: 0 0px 2px 1px rgba(0,0,0,0.2);
 }
 .main-header h1{
+	color: white;
 	margin-bottom: 20px;
-	background: red;
+	text-shadow: 0 1px rgba(0,0,0,0.3);
 }
 
 
