--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,18 @@
 body{
 
-	font-weight: 300;
-	font-size: 20px;
 	font-family: 'Open Sans','helvetica',arial,sans-serif;
+  font-weight: 300;
+  color: #62686f;
 
 	background-image: url(../img/bg5.jpg);
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #333;
+  font-weight: 300;
 }
 
 .container{
@@ -36,7 +41,103 @@ body{
 .main-header h1{
 	color: white;
 	margin-bottom: 20px;
-	text-shadow: 0 1px rgba(0,0,0,0.3);
+	text-shadow: 0 2px rgba(0,0,0,0.3);
 }
+
+.main-nav {
+	background-color: #333;
+	text-align: center;
+}
+
+.main-nav ul{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+}
+
+.main-nav ul li{
+	display: inline-block;
+	margin: 10px 10px;
+}
+.main-nav ul li a{
+	color: #fff;
+	font-size: 0.9rem;
+	font-weight: 300;
+	text-transform: uppercase;
+	text-decoration: none;
+}
+
+.main-nav ul li a:hover{
+	text-decoration: underline;
+}
+
+.info-section {
+	background-color: #fff;
+	padding: 1px;
+	padding: 30px 60px;
+	text-align: center;
+}
+
+.info-section header h2{
+	
+	font-size: 28px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.info-section header h2:after {
+	content: '';
+	border-bottom: 3px solid black;
+	width: 100px;
+	display: table;
+	margin: 10px auto 0;
+}
+
+.info-section__description {
+  font-style: italic;
+}
+
+.whatido__skill-list{
+	list-style: none;
+	margin: 0;
+	margin-top: 60px;
+	padding: 0;
+	/*overflow: hidden;*/
+}
+
+.whatido__skill-list:after{
+	content: '';
+	display: table;
+	clear: both;
+}
+
+
+.whatido__skill{
+	float: left;
+	padding-top: 100px;
+}
+
+.whatido__skill--code {
+  background-image: url(../img/skill-code.png);
+  background-repeat: no-repeat;
+  background-position: center top;
+  width: 33.33%;
+}
+
+.whatido__skill--design {
+  background-image: url(../img/skill-design.png);
+  background-repeat: no-repeat;
+  background-position: center top;
+  width: 33.33%;
+}
+
+.whatido__skill--product {
+  background-image: url(../img/skill-product.png);
+  background-repeat: no-repeat;
+  background-position: center top;
+  width: 33.33%;
+}
+
 
 
