--- a/css/main.css
+++ b/css/main.css
@@ -188,3 +188,41 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
+.contact input,
+.contact textarea {
+	width: 100%;
+	padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 20px;
+}
+
+.contact button {
+	width: 100%;
+  border: none;
+  border-radius: 999px;
+
+  background: #ffd524;
+
+  cursor: pointer;
+  text-shadow: 0 1px 1px rgba(0,0,0,0.2);
+  color: #fff;
+  box-shadow: 0 5px 0 #daae1d;
+}
+
+form {
+	width: 40%;
+	margin: 0 auto;
+	position: relative;
+}
+
+.contact form label{
+	margin-top: 10px;
+	position: absolute;
+	width: 100%;
+	left: -105%;
+	text-align: right;
+
+}
+
+
